@@ -127,6 +127,10 @@ bufferlines = 500
 
 showlog = false
 
+# Sets the font information.
+
+fontfamily = Helvetica
+fontsize = 8
 
 ##################################################
 # Accounts
