@@ -3,6 +3,7 @@ offlineimap (3.3.0) unstable; urgency=low
   * Moved executable to bin/offlineimap.  This will allow setup.py to
     properly install it as offlineimap instead of offlineimap.py.
   * Made sure executables use /usr/bin/env in bangpath.
+  * Font size for Blinkenlights interface is now configurable.
 
  -- John Goerzen <jgoerzen@complete.org>  Tue, 20 Aug 2002 10:46:56 -0500
 
